--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ rich==13.9.4
 markdown-it-py==3.0.0
 pygments==2.19.1
 mdurl==0.1.2
-opencv-python==4.7.0.72  # ใช้ OpenCV แทน Pillow
-imageio==2.22.0          # หรือใช้ ImageIO แทน Pillow
+pillow==9.4.0   # Pillow เวอร์ชันที่รองรับกับ Python 3.9
+
